[gd_scene load_steps=15 format=2]

[ext_resource path="res://Sprites/Enemies/Knight.png" type="Texture" id=1]
[ext_resource path="res://Sprites/FX/Light_view.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemies/Eye_knight.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Enemies/Enemy_knight.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Gameplay/Light_zone.gd" type="Script" id=5]
[ext_resource path="res://Prefabs/Enermies/Body_knight.tscn" type="PackedScene" id=6]
[ext_resource path="res://SFX/SFX/cartoony_step_1.wav" type="AudioStream" id=7]
[ext_resource path="res://addons/randomAudioStreamPlayer/random_audio_stream_player_2D.gd" type="Script" id=8]
[ext_resource path="res://SFX/SFX/Eye_scan.wav" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 12 )

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Character:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Character:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "wake_up"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Character:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ), Vector2( 1, 1.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Character:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 1 ), Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Character:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 1 ), Vector2( 1.05, 0.95 ), Vector2( 1, 1 ), Vector2( 0.8, 1 ), Vector2( 1.05, 0.95 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("SFX/Footstep")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [ 0.0 ],
"method": "play"
} ]
}

[node name="Enemy_knight" type="KinematicBody2D" groups=["Enemies"]]
collision_layer = 4
collision_mask = 4
script = ExtResource( 4 )
body = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -12 )
shape = SubResource( 1 )

[node name="Eye_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Roam_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Wait_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Character" type="Node2D" parent="."]

[node name="Eye" type="Sprite" parent="Character"]
position = Vector2( 0, -11 )
texture = ExtResource( 3 )

[node name="Damage_zone" type="Area2D" parent="Character/Eye"]
position = Vector2( -2, 0 )
script = ExtResource( 5 )

[node name="Light_sprite" type="Sprite" parent="Character/Eye/Damage_zone"]
material = SubResource( 2 )
z_index = 5
texture = ExtResource( 2 )
offset = Vector2( -125, 0 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Character/Eye/Damage_zone"]
polygon = PoolVector2Array( 0, 0, -246, -46, -246, 46 )

[node name="Sprites" type="Node2D" parent="Character"]

[node name="Helmet_back" type="Polygon2D" parent="Character/Sprites"]
z_index = -1
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -5, -12, -5, -16, -3, -18, 3, -18, 5, -15, 5, -7, -5, -7 )

[node name="Sprite" type="Sprite" parent="Character/Sprites"]
texture = ExtResource( 1 )
offset = Vector2( 0, -16 )

[node name="SFX" type="Node2D" parent="."]

[node name="Footstep" type="AudioStreamPlayer2D" parent="SFX"]
attenuation = 17.7531
bus = "Enemies"
script = ExtResource( 8 )
samples = [ ExtResource( 7 ) ]
random_volume_range = 0
random_pitch_range = 0.5

[node name="Eye_scan" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 9 )
attenuation = 30.0
bus = "Enemies"

[node name="Anims" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 4 )
anims/wake_up = SubResource( 5 )
anims/walk = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 248, 224 )
scale = Vector2( 24.8, 23.2 )
rect = Rect2( -20, -20, 20, 20 )

[connection signal="timeout" from="Roam_timer" to="." method="_on_Roam_timer_timeout"]
[connection signal="timeout" from="Wait_timer" to="." method="_on_Wait_timer_timeout"]
[connection signal="body_entered" from="Character/Eye/Damage_zone" to="Character/Eye/Damage_zone" method="_on_Damage_zone_body_entered"]
[connection signal="body_exited" from="Character/Eye/Damage_zone" to="Character/Eye/Damage_zone" method="_on_Damage_zone_body_exited"]
